# gstr

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: compare_with_string.rs  comparison.rs
src/: gstr.rs  lib.rs  rkyv.rs  serde.rs  std_impl.rs
